# PYTHON_DATA_COURSE

./: .gitignore  README.md  pyproject.toml
Project/: 0_EDA_Intro.ipynb  1_Skill_Demand.ipynb  2_Skills_Trend.ipynb  3_Salary_Analysis.ipynb  4_Remote_Analysis.ipynb  5_Optimal_Skills.ipynb
